because of Phabricator reports.

* (T314476) Make Perso-Arabic the primary writing system for Kashmiri,
  under the language code "ks". "ks-arab" and "ks-deva" are preserved for
  backwards compatibility. "ks-deva" may be removed in a future release.
* (T395223) Added language support for Yucatec Maya (yua).
* (T397435) Added language support for Dolgan (dlg).
* …

=== Breaking changes in 1.45 ===

* SessionProvider::setLogger(), setConfig(), setManager(), setHookContainer()
  methods deprecated in 1.37, have been removed.
* SqlBagOStuff::expireAll() and ::deleteAll(), deprecated in 1.41 have been
  removed.
* (T376295) The ability to use raw HTML messages for the copyright footer has
  been removed. The messages 'copyright' and 'history_copyright', the hook
  'SkinCopyrightFooter', and the config option $wgAllowRawHtmlCopyrightMessages
  have all been removed. Instead use the messages 'copyright-footer' and
  'copyright-footer-history', and the hook 'SkinCopyrightFooterMessage'.
* (T343849) Subclasses that override SpecialPage::getDescription() or
  Action::getPageTitle() must return a Message object rather than a string.
* (T343994) OutputPage::setPageTitle() no longer accepts Message objects.
  Use OutputPage::setPageTitleMsg() to set the title from a message.
* OutputPage::prepareErrorPage() no longer accepts parameters.
  Use setPageTitle()/setPageTitleMsg() or setHTMLTitle() directly.
* The SiteConfiguration::extractGlobalSetting method, not used outside of
  SiteConfiguration class, is now private.
* RL\Module::getDeprecationInformation() deprecated in 1.41, now unused, has
  been removed.
* AuthManager::forcePrimaryAuthenticationProviders(), deprecated in 1.43 has
  been removed.
* User::whoIs() and ::whoIsReal(), deprecated since 1.43, have been removed.
* Abstract function AuthenticationRequestTestCase::provideLoadFromSubmission is
  now static and has to be declared as static function when implemented.